<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="greeting">MTA UPs&amp;DOWNs</string>
    <string name="app_name">MTA UPs&amp;DOWNs</string>
    <string name="MTA_uptodate">MTA UpToDate</string>
    <string name="wait_for_signal">WAIT FOR SIGNAL</string>
    <string name="ups">UPs</string>
    <string name="downs">DOWNs</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connect_to_internet">Please connect to internet to get the latest MTA service status update.</string>
    <string name="ok">OK</string>
    <string name="about">About</string>
    <string name="alert">Alert</string>
    <string name="exit">Exit</string>
    <string name="update_setting">Update Setting</string>
    <string name="app_version">version 1.01</string>
    <string name="copyright">Copyright © 2012 Yinmotion\nAll Rights Reserved.</string>
    <string name="add_alert">Add alert</string>
    <string name="turn_alert_on">Turn alert on</string>
    <string name="time">Time</string>
    <string name="subway_lines">Subway Lines</string>
    <string name="turn_vibrate_on">Vibrate</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="no_alert">No alert</string>
	<string name="select_lines">Select lines</string>
	<string name="to_google_maps">To Google Maps</string>
</resources>