<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#222" >

        <TextView
            android:id="@+id/about_app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/title_grey"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="36dp"
            android:paddingLeft="80dp"
            android:paddingRight="80dp"
            android:text="@string/ok" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_app_title"
            android:layout_centerHorizontal="true"
            android:text="@string/app_version"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/copyright"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:gravity="center_horizontal"
            android:text="@string/copyright"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@color/title_grey" />

    </RelativeLayout>
