<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/linear_gradient_grey">
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    android:paddingLeft="20dp"
	    android:paddingRight="20dp"
	    >
	    	<RelativeLayout
	    	    android:id="@+id/view_turn_alert_on"
	    	    android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal"
			    android:clickable="true"
			    android:state_pressed="true"
	       		android:background="@android:drawable/list_selector_background">
				<TextView
				    android:id="@+id/txt_turn_alert_on"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/turn_alert_on"
				    android:textColor="@color/white"
				    android:textSize="22dp"
				    android:paddingTop="20dp"
				    android:paddingLeft="10dp"
				    android:paddingBottom="20dp"
				    />
				<CheckBox
				    android:id="@+id/checkbox_alert"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:layout_alignParentRight="true"
				    android:paddingRight="10dp"
				    android:layout_centerInParent="true"
				    android:clickable="false"
				    />
			</RelativeLayout>
			<ImageView
		        android:id="@+id/divider_v"	        
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:background="@color/dark_grey"
		        />
	
			<LinearLayout
			    android:id="@+id/view_time"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:paddingTop="15dp"
			    android:paddingLeft="10dp"
			    android:paddingBottom="15dp"
			    android:clickable="true"
			    android:state_pressed="true"
	       		android:background="@android:drawable/list_selector_background" >
	
				<TextView
				    android:id="@+id/txt_time"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/time"
				    android:textAppearance="?android:attr/textAppearanceMedium" />
	
				<TextView 
				    android:id="@+id/txt_timecode"
			    	android:layout_width="match_parent"
			    	android:layout_height="wrap_content"
			    	android:text="0:00AM"
			    	android:textAppearance="?android:attr/textAppearanceSmall"			    
				    />
				
			</LinearLayout>
			<ImageView
		        android:id="@+id/divider_v"	        
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:background="@color/dark_grey"
		        />
			<LinearLayout
			    android:id="@+id/view_lines"
			    android:layout_width="match_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
			    android:paddingTop="15dp"
			    android:paddingLeft="10dp"
			    android:paddingBottom="15dp"
			    android:clickable="true"
			    android:state_pressed="true"
	       		android:background="@android:drawable/list_selector_background" >
	
				<TextView
				    android:id="@+id/txt_subwaylines"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/subway_lines"
				    android:textAppearance="?android:attr/textAppearanceMedium" />
	
				<GridView
			        android:id="@+id/setnotify_lines"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:numColumns="6"
			        android:orientation="horizontal"
			        android:stretchMode="columnWidth"
			        android:horizontalSpacing="0dp"/>
				
			</LinearLayout>
			<ImageView
		        android:id="@+id/divider_v"	        
		        android:layout_width="match_parent"
		        android:layout_height="1dp"
		        android:background="@color/dark_grey"
		        />
			<RelativeLayout
	    	    android:id="@+id/view_vibrate_on"
	    	    android:layout_width="match_parent"
	    		android:layout_height="wrap_content"
	    		android:orientation="horizontal"
			    android:clickable="true"
			    android:state_pressed="true"
	       		android:background="@android:drawable/list_selector_background">
				<TextView
				    android:id="@+id/txt_vibrate_on"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:text="@string/turn_vibrate_on"
				    android:textSize="22dp"
				    android:textColor="@color/white"
				    android:paddingTop="15dp"
				    android:paddingLeft="10dp"
				    android:paddingBottom="15dp"
				    />
				<CheckBox
				    android:id="@+id/checkbox_vibrate"
				    android:layout_width="wrap_content"
				    android:layout_height="wrap_content"
				    android:paddingRight="10dp"
				    android:layout_alignParentRight="true"
				    android:layout_centerInParent="true"
				    android:clickable="false"
				    />
			</RelativeLayout>		
	</LinearLayout>
	<LinearLayout
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:layout_alignParentBottom="true"
    	android:orientation="vertical"
	    >
	    <ImageView
	        android:id="@+id/divider_v"	        
	        android:layout_width="match_parent"
	        android:layout_height="1dp"
	        android:background="@color/dark_grey"
	        />
	    <LinearLayout
	        android:id="@+id/setnotify_bottom_menu"
		    android:layout_width="match_parent"
	    	android:layout_height="wrap_content"
	    	android:orientation="horizontal"
		    >
				<TextView 
				    android:id="@+id/setnotify_cancel"
				    android:layout_width="wrap_content"
	    			android:layout_height="wrap_content"
	    			
		    		android:text="@string/cancel"
		    		android:textColor="@color/white"
		    		android:textAppearance="?android:attr/textAppearanceMedium"
		    		android:clickable="true"
			    	android:state_pressed="true"
	       			android:background="@android:drawable/list_selector_background"
	       			android:layout_weight="1"
		    		android:layout_gravity="center_vertical"
	       			android:gravity="center_horizontal"
	       			android:paddingTop="10dp"
	    			android:paddingBottom="10dp"
		    		/>
				
				<ImageView
			        android:id="@+id/divider_v"	        
			        android:layout_width="1dp"
			        android:layout_height="match_parent"
			        android:layout_marginTop="10dp"
        			android:layout_marginBottom="10dp"
			        android:background="@color/dark_grey"
			        />
				<TextView 
				    android:id="@+id/setnotify_delete"
				    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:layout_gravity="center_vertical"
	       			android:gravity="center_horizontal"
		    		android:text="@string/delete"
		    		android:textAppearance="?android:attr/textAppearanceMedium"
		    		android:clickable="true"
			    	android:state_pressed="true"
	       			android:background="@android:drawable/list_selector_background"
	       			android:layout_weight="1"
	       			android:paddingTop="10dp"
	    			android:paddingBottom="10dp"
		    		/>
				<ImageView
			        android:id="@+id/divider_delete"	        
			        android:layout_width="1dp"
			        android:layout_height="match_parent"
			        android:background="@color/dark_grey"
			        android:layout_marginTop="10dp"
        			android:layout_marginBottom="10dp"
			        />
				<TextView
				    android:id="@+id/setnotify_ok"
				    android:layout_width="wrap_content"
		    		android:layout_height="wrap_content"
		    		android:layout_gravity="center_vertical"
	       			android:gravity="center_horizontal"
		    		android:text="@string/ok"
		    		android:textAppearance="?android:attr/textAppearanceMedium"
		    		android:clickable="true"
			    	android:state_pressed="true"
	       			android:background="@android:drawable/list_selector_background"
	       			android:layout_weight="1"
	       			android:paddingTop="10dp"
	    			android:paddingBottom="10dp"
		    		/>
			    
				
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>